--- a/front-end/index.html
+++ b/front-end/index.html
@@ -251,8 +251,8 @@
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 white black-text">Some of the latest trends in town
+        <div class="row center breadcrumb_wrapper">
+          <h5 class="header col s12">Some of the latest trends in town
           </h5>
         </div>
       </div>
@@ -444,7 +444,7 @@
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
-        <div class="row center">
+        <div class="row center breadcrumb_wrapper">
           <h5 class="header col s12 light">Some of the latest trends in town</h5>
         </div>
       </div>
