--- a/front-end/login.html
+++ b/front-end/login.html
@@ -100,14 +100,13 @@
                     <form>
                         <div class="row">
                             <div class="input-field col s12">
+                                <i class="material-icons prefix">mail</i>
                                 <input id="login_email" type="email" class="validate white-text">
                                 <label for="login_email">Email</label>
                                 <span class="helper-text" data-error="Incorrect Email ID" data-success="right"></span>
                             </div>
-                        </div>
-
-                        <div class="row">
                             <div class="input-field col s12">
+                                <i class="material-icons prefix">lock</i>
                                 <input id="login_password" type="password" class="validate white-text">
                                 <label for="login_password">Password</label>
                             </div>
@@ -119,7 +118,7 @@
             </div>
         </div>
 
-        <div class="col s12 m4 ">
+        <div class="col s12 m5 ">
             <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
                     <!-- SIGNUP FORM  -->
@@ -129,26 +128,23 @@
 
                         <div class="row">
                             <div class="input-field col s12">
+                                <i class="material-icons prefix">account_circle</i>
                                 <input id="signup-name" type="text" class="validate white-text">
                                 <label for="signup-name">Name</label>
                             </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="input-field col s12">
+                            <div class="input-field col s12 m6 ">
+                                <i class="material-icons prefix">mail</i>
                                 <input id="email" type="email" class="validate white-text">
                                 <label for="email">Email</label>
                                 <span class="helper-text" data-error="Incorrect Email ID" data-success="right"></span>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
+                            <div class="input-field col s12 m6">
+                                <i class="material-icons prefix">phone</i>
                                 <input id="mobile" type="number" class="validate white-text">
                                 <label for="mobile">Mobile No.</label>
                             </div>
-                        </div>
-                        <div class="row">
                             <div class="input-field col s12">
+                                <i class="material-icons prefix">lock</i>
                                 <input id="password" type="password" class="validate white-text">
                                 <label for="password">Password</label>
                             </div>
