--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,7 +7,7 @@
   <title>OBB - ECOM</title>
 
   <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
@@ -36,9 +36,11 @@
         <div class="col m4 l4 s12">
           <ul class="left hide-on-med-and-down nav-ul">
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Cart</a></li>
             <li><a href="login.html">Login</a></li>
+            <li id="nav_cart"><a href="#"> <i class="material-icons-outlined">shopping_cart</i>
+              </a></li>
           </ul>
+
         </div>
 
         <!-- MOBILE MENU -->
@@ -61,7 +63,8 @@
           <li><a href="#">Cart</a></li>
           <li><a href="login.html">Login</a></li>
         </ul>
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+        <a href="#" data-target="nav-mobile" class="left sidenav-trigger"><i class="material-icons">menu</i></a>
+        <a href="cart.html" class="right sidenav-trigger"><i class="material-icons-outlined">shopping_cart</i></a>
       </div>
     </nav>
 
