--- a/front-end/login.html
+++ b/front-end/login.html
@@ -37,9 +37,11 @@
                 <div class="col m4 l4 s12">
                     <ul class="left hide-on-med-and-down nav-ul">
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="#">Cart</a></li>
                         <li><a href="login.html">Login</a></li>
+                        <li id="nav_cart"><a href="#"> <i class="material-icons-outlined">shopping_cart</i>
+                            </a></li>
                     </ul>
+
                 </div>
 
                 <!-- MOBILE MENU -->
@@ -62,7 +64,9 @@
                     <li><a href="#">Cart</a></li>
                     <li><a href="login.html">Login</a></li>
                 </ul>
-                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <a href="#" data-target="nav-mobile" class="left sidenav-trigger"><i class="material-icons">menu</i></a>
+                <a href="cart.html" class="right sidenav-trigger"><i
+                        class="material-icons-outlined">shopping_cart</i></a>
             </div>
         </nav>
 
