--- a/front-end/categories.html
+++ b/front-end/categories.html
@@ -7,10 +7,11 @@
     <title>OBB - ECOM</title>
 
     <!-- CSS  -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
+
 
 
 <body>
@@ -96,162 +97,176 @@
             <p>Some of the latest trends in town</p>
         </div>
 
-
         <div class="row center">
-            <div class="col m4 l3 s6">
-                <div class="dress-card">
-                    <div class="dress-card-head">
-                        <img class="dress-card-img-top"
-                            src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578935/2018/10/23/d7b740bc-e00e-4bec-97aa-65016f8ff2e71540289479612-Harpa-Women-Dresses-2331540289479465-1.jpg"
-                            alt="">
+            <a href="product.html" class="black-text">
+                <div class="col m4 l3 s6">
+                    <div class="dress-card box_shadow">
+                        <div class="dress-card-head">
+                            <img class="dress-card-img-top"
+                                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578935/2018/10/23/d7b740bc-e00e-4bec-97aa-65016f8ff2e71540289479612-Harpa-Women-Dresses-2331540289479465-1.jpg"
+                                alt="">
 
-                    </div>
-                    <div class="dress-card-body">
-                        <h4 class="dress-card-title">Harpa</h4>
-                        <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
-                                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
-                                OFF)</span></p>
-                        <a id="product_button" class="waves-effect waves-light btn-small  btn-flat"
-                            href="product.html">View
-                            More</a>
+                        </div>
+                        <div class="dress-card-body">
+                            <h4 class="dress-card-title">Harpa</h4>
+                            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                                    class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
+                                    OFF)</span></p>
+                            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat"
+                                href="product.html">View
+                                More</a>
 
-                    </div>
+                        </div>
 
-                </div>
-            </div>
-            <div class="col m4 l3 s6">
-                <div class="dress-card">
-                    <div class="dress-card-head">
-                        <img class="dress-card-img-top"
-                            src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/6625378/2018/6/5/fcec8d8e-4253-4fa4-ae6e-c6805b3b8fd31528183265021-na-2331528183264786-1.jpg"
-                            alt="">
-                    </div>
-                    <div class="dress-card-body">
-                        <h4 class="dress-card-title">Harpa</h4>
-                        <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
-                                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
-                                OFF)</span></p>
-                        <a id="product_button" class="waves-effect waves-light btn-small  btn-flat"
-                            href="product.html">View
-                            More</a>
-
-                    </div>
-
-                </div>
-            </div>
-            <div class="col m4 l3 s6">
-                <div class="dress-card">
-                    <div class="dress-card-head">
-                        <img class="dress-card-img-top"
-                            src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578929/2018/10/23/86988cdc-cbe3-4b13-93f9-b37ad571b4761540274855321-Harpa-Women-Dresses-9171540274855158-1.jpg"
-                            alt="">
-                    </div>
-                    <div class="dress-card-body">
-                        <h4 class="dress-card-title">Harpa</h4>
-                        <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
-                                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
-                                OFF)</span></p>
-                        <a id="product_button" class="waves-effect waves-light btn-small  btn-flat"
-                            href="product.html">View
-                            More</a>
                     </div>
                 </div>
-            </div>
-            <div class="col m4 l3 s6">
-                <div class="dress-card">
-                    <div class="dress-card-head">
-                        <img class="dress-card-img-top"
-                            src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578940/2018/10/23/fe701151-69e6-4e20-9e2a-ace63081a8e11540282217137-Harpa-Women-Dresses-191540282216937-5.jpg"
-                            alt="">
-                    </div>
-                    <div class="dress-card-body">
-                        <h4 class="dress-card-title">Harpa</h4>
-                        <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
-                                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
-                                OFF)</span></p>
-                        <a id="product_button" class="waves-effect waves-light btn-small  btn-flat"
-                            href="product.html">View
-                            More</a>
+            </a>
+            <a href="product.html" class="black-text">
+                <div class="col m4 l3 s6">
+                    <div class="dress-card box_shadow">
+                        <div class="dress-card-head">
+                            <img class="dress-card-img-top"
+                                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/6625378/2018/6/5/fcec8d8e-4253-4fa4-ae6e-c6805b3b8fd31528183265021-na-2331528183264786-1.jpg"
+                                alt="">
+                        </div>
+                        <div class="dress-card-body">
+                            <h4 class="dress-card-title">Harpa</h4>
+                            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                                    class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
+                                    OFF)</span></p>
+                            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat"
+                                href="product.html">View
+                                More</a>
+
+                        </div>
 
                     </div>
-
                 </div>
-            </div>
-            <div class="col m4 l3 s6">
-                <div class="dress-card">
-                    <div class="dress-card-head">
-                        <img class="dress-card-img-top"
-                            src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578929/2018/10/23/86988cdc-cbe3-4b13-93f9-b37ad571b4761540274855321-Harpa-Women-Dresses-9171540274855158-1.jpg"
-                            alt="">
+            </a>
+            <a href="product.html" class="black-text">
+                <div class="col m4 l3 s6">
+                    <div class="dress-card box_shadow">
+                        <div class="dress-card-head">
+                            <img class="dress-card-img-top"
+                                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578929/2018/10/23/86988cdc-cbe3-4b13-93f9-b37ad571b4761540274855321-Harpa-Women-Dresses-9171540274855158-1.jpg"
+                                alt="">
+                        </div>
+                        <div class="dress-card-body">
+                            <h4 class="dress-card-title">Harpa</h4>
+                            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                                    class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
+                                    OFF)</span></p>
+                            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat"
+                                href="product.html">View
+                                More</a>
+                        </div>
                     </div>
-                    <div class="dress-card-body">
-                        <h4 class="dress-card-title">Harpa</h4>
-                        <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
-                                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
-                                OFF)</span></p>
-                        <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
-
-                    </div>
-
                 </div>
-            </div>
-            <div class="col m4 l3 s6">
-                <div class="dress-card">
-                    <div class="dress-card-head">
-                        <img class="dress-card-img-top"
-                            src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578940/2018/10/23/fe701151-69e6-4e20-9e2a-ace63081a8e11540282217137-Harpa-Women-Dresses-191540282216937-5.jpg"
-                            alt="">
-                    </div>
-                    <div class="dress-card-body">
-                        <h4 class="dress-card-title">Harpa</h4>
-                        <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
-                                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
-                                OFF)</span></p>
-                        <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+            </a>
+            <a href="product.html" class="black-text">
+                <div class="col m4 l3 s6">
+                    <div class="dress-card box_shadow">
+                        <div class="dress-card-head">
+                            <img class="dress-card-img-top"
+                                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578940/2018/10/23/fe701151-69e6-4e20-9e2a-ace63081a8e11540282217137-Harpa-Women-Dresses-191540282216937-5.jpg"
+                                alt="">
+                        </div>
+                        <div class="dress-card-body">
+                            <h4 class="dress-card-title">Harpa</h4>
+                            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                                    class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
+                                    OFF)</span></p>
+                            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat"
+                                href="product.html">View
+                                More</a>
+
+                        </div>
 
                     </div>
-
                 </div>
-            </div>
-            <div class="col m4 l3 s6">
-                <div class="dress-card">
-                    <div class="dress-card-head">
-                        <img class="dress-card-img-top"
-                            src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578935/2018/10/23/d7b740bc-e00e-4bec-97aa-65016f8ff2e71540289479612-Harpa-Women-Dresses-2331540289479465-1.jpg"
-                            alt="">
+            </a>
+            <a href="product.html" class="black-text">
+                <div class="col m4 l3 s6">
+                    <div class="dress-card box_shadow">
+                        <div class="dress-card-head">
+                            <img class="dress-card-img-top"
+                                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578929/2018/10/23/86988cdc-cbe3-4b13-93f9-b37ad571b4761540274855321-Harpa-Women-Dresses-9171540274855158-1.jpg"
+                                alt="">
+                        </div>
+                        <div class="dress-card-body">
+                            <h4 class="dress-card-title">Harpa</h4>
+                            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                                    class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
+                                    OFF)</span></p>
+                            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+                        </div>
 
                     </div>
-                    <div class="dress-card-body">
-                        <h4 class="dress-card-title">Harpa</h4>
-                        <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
-                                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
-                                OFF)</span></p>
-                        <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
-
-                    </div>
-
                 </div>
-            </div>
-            <div class="col m4 l3 s6">
-                <div class="dress-card">
-                    <div class="dress-card-head">
-                        <img class="dress-card-img-top"
-                            src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/6625378/2018/6/5/fcec8d8e-4253-4fa4-ae6e-c6805b3b8fd31528183265021-na-2331528183264786-1.jpg"
-                            alt="">
-                    </div>
-                    <div class="dress-card-body">
-                        <h4 class="dress-card-title">Harpa</h4>
-                        <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
-                                class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
-                                OFF)</span></p>
-                        <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+            </a>
+            <a href="product.html" class="black-text">
+                <div class="col m4 l3 s6">
+                    <div class="dress-card box_shadow">
+                        <div class="dress-card-head">
+                            <img class="dress-card-img-top"
+                                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578940/2018/10/23/fe701151-69e6-4e20-9e2a-ace63081a8e11540282217137-Harpa-Women-Dresses-191540282216937-5.jpg"
+                                alt="">
+                        </div>
+                        <div class="dress-card-body">
+                            <h4 class="dress-card-title">Harpa</h4>
+                            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                                    class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
+                                    OFF)</span></p>
+                            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+                        </div>
 
                     </div>
-
                 </div>
-            </div>
+            </a>
+            <a href="product.html" class="black-text">
+                <div class="col m4 l3 s6">
+                    <div class="dress-card box_shadow">
+                        <div class="dress-card-head">
+                            <img class="dress-card-img-top"
+                                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/7578935/2018/10/23/d7b740bc-e00e-4bec-97aa-65016f8ff2e71540289479612-Harpa-Women-Dresses-2331540289479465-1.jpg"
+                                alt="">
+
+                        </div>
+                        <div class="dress-card-body">
+                            <h4 class="dress-card-title">Harpa</h4>
+                            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                                    class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
+                                    OFF)</span></p>
+                            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+                        </div>
+
+                    </div>
+                </div>
+            </a>
+            <a href="product.html" class="black-text">
+                <div class="col m4 l3 s6">
+                    <div class="dress-card box_shadow">
+                        <div class="dress-card-head">
+                            <img class="dress-card-img-top"
+                                src="https://assets.myntassets.com/h_1440,q_100,w_1080/v1/assets/images/6625378/2018/6/5/fcec8d8e-4253-4fa4-ae6e-c6805b3b8fd31528183265021-na-2331528183264786-1.jpg"
+                                alt="">
+                        </div>
+                        <div class="dress-card-body">
+                            <h4 class="dress-card-title">Harpa</h4>
+                            <p class="dress-card-para"><span class="dress-card-price">Rs.839 &ensp;</span><span
+                                    class="dress-card-crossed">Rs.2099</span><span class="dress-card-off">&ensp;(60%
+                                    OFF)</span></p>
+                            <a id="product_button" class="waves-effect waves-light btn-small  btn-flat">Add To Cart</a>
+
+                        </div>
+
+                    </div>
+                </div>
+            </a>
         </div>
-
     </div>
     <!-- ALL PRODUCTS - END -->
 
