--- a/front-end/contact.html
+++ b/front-end/contact.html
@@ -133,8 +133,9 @@
 
     <div id="" class="row">
         <div class="col s12 m10  offset-m1">
-            <div class="card">
+            <div class="card contact_card_custom">
                 <div class="card-content white-text">
+                    <span class="card-title">Contact Us</span>
                     <div class="row">
                         <form class="col s12">
                             <div class="row">
@@ -159,7 +160,8 @@
                                     <label for="textarea1">Your Message</label>
                                 </div>
                             </div>
-                            <a id="submit_button" class="waves-effect waves-light btn-large  btn-flat center">Send
+                            <a id="contact_submit_button"
+                                class="waves-effect waves-light btn-large  btn-flat center">Send
                                 Message</a>
 
                         </form>
