--- a/front-end/login.html
+++ b/front-end/login.html
@@ -96,12 +96,22 @@
 
 
     <div id="login" class="row">
-        <div class="col s12 m4  offset-m2">
-            <div class="card">
+        <!-- <a href="https://www.freepik.com/vectors/background">Background vector created by freepik - www.freepik.com</a> -->
+        <!-- <img src="media/login/1.jpg" alt=""> -->
+        <div class="col s12 m5 offset-m1 ">
+            <h1 class="login-title">Welcome back</h1>
+            <p class="login-body">To keep connected with us please Login with your information.</p>
+        </div>
+
+        <div class="col s12 m5">
+            <div class="card login_card_custom">
                 <div class="card-content white-text">
                     <!-- LOGIN FORM -->
-                    <span class="card-title">Login</span>
-                    <form>
+                    <ul class="tabs">
+                        <li class="tab col s6 "><a id="login_click" class="active" href="#login_form">Login</a></li>
+                        <li class="tab col s6"><a id="register_click" href="#signup_form">Register</a></li>
+                    </ul>
+                    <form id="login_form">
                         <div class="row">
                             <div class="input-field col s12">
                                 <i class="material-icons prefix">mail</i>
@@ -118,18 +128,7 @@
                         <a id="submit_button" class="waves-effect waves-light btn-large  btn-flat center">Login</a>
 
                     </form>
-                </div>
-            </div>
-        </div>
-
-        <div class="col s12 m5 ">
-            <div class="card blue-grey darken-1">
-                <div class="card-content white-text">
-                    <!-- SIGNUP FORM  -->
-                    <span class="card-title">Register</span>
-                    <form>
-                        <!-- <h2>Register</h2> -->
-
+                    <form id="signup_form">
                         <div class="row">
                             <div class="input-field col s12">
                                 <i class="material-icons prefix">account_circle</i>
@@ -158,9 +157,9 @@
 
                     </form>
                 </div>
-
             </div>
         </div>
+
     </div>
     <footer class="page-footer">
         <div class="container">
