--- a/front-end/login.html
+++ b/front-end/login.html
@@ -125,7 +125,8 @@
                                 <label for="login_password">Password</label>
                             </div>
                         </div>
-                        <a id="submit_button" class="waves-effect waves-light btn-large  btn-flat center">Login</a>
+                        <a id="submit_login_button"
+                            class="waves-effect waves-light btn-large  btn-flat center">Login</a>
 
                     </form>
                     <form id="signup_form">
@@ -152,7 +153,7 @@
                                 <label for="password">Password</label>
                             </div>
                         </div>
-                        <a id="submit_button" class="waves-effect waves-light btn-large  btn-flat center">Sign
+                        <a id="submit_signup_button" class="waves-effect waves-light btn-large btn-flat center">Sign
                             Up</a>
 
                     </form>
