New Navbar looks

--- a/front-end/categories.html
+++ b/front-end/categories.html
@@ -18,25 +18,29 @@
     <div class="">
         <nav class="white z-depth-0" role="navigation">
             <div class="row">
-                <div class="col s12 m2  center" style="background-color: aqua !important;">
+                <div class="col s12 m3 center">
                     <a id="logo-container" class="brand-logo" href="index.html">ECOMMERCE</a>
                 </div>
-                <div class="col m4 l4 s12 " style="background-color:rgb(185, 185, 185)">
-                    <ul class="right hide-on-med-and-down nav-ul">
+                <div class="col s12 m6 push-custom">
+                    <ul class="hide-on-med-and-down nav-ul">
                         <li><a href="index.html">Home</a></li>
-                        <li id="dropdown"><a href="#">Categories &#9662;</a>
+                        <li><a href="categories.html">Kids</a></li>
+                        <li><a href="categories.html">Women's</a></li>
+                        <li><a href="categories.html">Men's</a></li>
+                        <!-- dropdown -->
+                        <!-- <li id="dropdown"><a href="#">Categories &#9662;</a>
                             <ul class="dropdown">
                                 <li><a href="categories.html">Kids &#9656;</a></li>
                                 <li><a href="categories.html">Women's &#9656;</a></li>
                                 <li><a href="categories.html">Men's &#9656;</a></li>
                             </ul>
-                        </li>
+                        </li> -->
 
                     </ul>
                 </div>
 
-                <div class="col s12 m4 l4" style="background-color: rgb(148, 159, 219) !important;">
-                    <ul class="right hide-on-med-and-down nav-ul">
+                <div class="col s12 m3">
+                    <ul class="hide-on-med-and-down nav-ul">
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="login.html">Login</a></li>
                         <li id="nav_cart"><a href="#"> <i class="material-icons-outlined">shopping_cart</i>
