--- a/front-end/index.html
+++ b/front-end/index.html
@@ -16,60 +16,65 @@
 <body>
   <div class="">
     <nav class="white z-depth-0" role="navigation">
-      <div class="row">
-        <div class="col m4 l4 s12 ">
-          <ul class="right hide-on-med-and-down nav-ul">
-            <li><a href="index.html">Home</a></li>
-            <li id="dropdown"><a href="#">Categories &#9662;</a>
-              <ul class="dropdown">
-                <li><a href="categories.html">Kids &#9656;</a></li>
-                <li><a href="categories.html">Women's &#9656;</a></li>
-                <li><a href="categories.html">Men's &#9656;</a></li>
-              </ul>
-            </li>
+        <div class="row">
+            <div class="col s12 m3 center">
+                <a id="logo-container" class="brand-logo" href="index.html">ECOMMERCE</a>
+            </div>
+            <div class="col s12 m6 push-custom">
+                <ul class="hide-on-med-and-down nav-ul">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="categories.html">Kids</a></li>
+                    <li><a href="categories.html">Women's</a></li>
+                    <li><a href="categories.html">Men's</a></li>
+                    <!-- dropdown -->
+                    <!-- <li id="dropdown"><a href="#">Categories &#9662;</a>
+                        <ul class="dropdown">
+                            <li><a href="categories.html">Kids &#9656;</a></li>
+                            <li><a href="categories.html">Women's &#9656;</a></li>
+                            <li><a href="categories.html">Men's &#9656;</a></li>
+                        </ul>
+                    </li> -->
 
-          </ul>
-        </div>
-        <div class="col m4 l4 s12">
-          <a id="logo-container" class="brand-logo center" href="index.html">ECOMMERCE</a>
-        </div>
-        <div class="col m4 l4 s12">
-          <ul class="left hide-on-med-and-down nav-ul">
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li id="nav_cart"><a href="#"> <i class="material-icons-outlined">shopping_cart</i>
-              </a></li>
-          </ul>
+                </ul>
+            </div>
 
-        </div>
+            <div class="col s12 m3">
+                <ul class="hide-on-med-and-down nav-ul">
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li id="nav_cart"><a href="#"> <i class="material-icons-outlined">shopping_cart</i>
+                        </a></li>
+                </ul>
 
-        <!-- MOBILE MENU -->
-        <ul id="nav-mobile" class="sidenav">
-          <li><a href="index.html">Home</a></li>
-          <li>
-            <div class="divider"></div>
-          </li>
-          <li><a class="subheader">Categories</a></li>
-          <ul>
-            <li><a href="categories.html">Kids</a></li>
-            <li><a href="categories.html">Women's</a></li>
-            <li><a href="categories.html">Men's</a></li>
-          </ul>
-          </li>
-          <li>
-            <div class="divider"></div>
-          </li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="#">Cart</a></li>
-          <li><a href="login.html">Login</a></li>
-        </ul>
-        <a href="#" data-target="nav-mobile" class="left sidenav-trigger" id="nav_cart"><i
-            class="material-icons">menu</i></a>
-        <a href="cart.html" class="right sidenav-trigger"><i class="material-icons-outlined">shopping_cart</i></a>
-      </div>
+            </div>
+
+            <!-- MOBILE MENU -->
+            <ul id="nav-mobile" class="sidenav">
+                <li><a href="index.html">Home</a></li>
+                <li>
+                    <div class="divider"></div>
+                </li>
+                <li><a class="subheader">Categories</a></li>
+                <ul>
+                    <li><a href="categories.html">Kids</a></li>
+                    <li><a href="categories.html">Women's</a></li>
+                    <li><a href="categories.html">Men's</a></li>
+                </ul>
+                </li>
+                <li>
+                    <div class="divider"></div>
+                </li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Cart</a></li>
+                <li><a href="login.html">Login</a></li>
+            </ul>
+            <a href="#" data-target="nav-mobile" class="left sidenav-trigger"><i class="material-icons">menu</i></a>
+            <a href="cart.html" class="right sidenav-trigger"><i
+                    class="material-icons-outlined">shopping_cart</i></a>
+        </div>
     </nav>
 
-  </div>
+</div>
 
 
   <!-- SLIDER -->
