--- a/front-end/product.html
+++ b/front-end/product.html
@@ -8,17 +8,17 @@
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
 </head>
-
 
 <body>
     <div class="">
         <nav class="white z-depth-0" role="navigation">
             <div class="row">
                 <div class="col s12 m3 center">
-                    <a id="logo-container" class="brand-logo" href="index.html">ECOMMERCE</a>
+                    <a id="logo-container" class="brand-logo" href="index.html">CLASSY CLOSET</a>
                 </div>
                 <div class="col s12 m6 push-custom">
                     <ul class="hide-on-med-and-down nav-ul">
@@ -151,26 +151,72 @@
     <!-- PRODUCT - END -->
 
 
+    <section>
+        <svg class="curve" data-name="layer" viewBox="0 0 1416.9 174.01">
+            <path d="M0,220.8S283.66,120,608.94,163.56s437.93,100.57,818,10.34V309.54H0V280.8Z"
+                transform="translate(0 -120.53)" />
+
+        </svg>
+    </section>
 
     <footer class="page-footer">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
-                    <h5>ECOMMERCE</h5>
-                    <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
-                        scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna
-                        fermentum ac.</p>
+                <div class="col s12 m4">
+                    <div class="card footer_card z-depth-0">
+                        <div class="card-content white-text">
+                            <span class="card-title">about</span>
+                            <ul class="quick-links">
+                                <li>24x7 Customer Support</li>
+                                <li>Easy Returns</li>
+                                <li>Convenient Shopping</li>
+                                <li>One Stop Shop</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="col l3 s12">
+                <div class="col s12 m4">
+                    <div class="card footer_card z-depth-0">
+                        <div class="card-content white-text">
+                            <span class="card-title">Contact details</span>
+                            <ul class="quick-links">
+                                <li>C-25, Aliganj, Lucknow - 226024, Uttar Pradesh, India.</li>
+                                <li>info@onebigbit.com
+                                    business@onebigbit.com</li>
+                                <li>+91-522-431-6496</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Quick Links</h5>
-                    <ul class="quick-links">
-                        <li><a class="white-text" href="index.html">HOME</a></li>
-                        <li><a class="white-text" href="categories.html">CATEGORIES</a></li>
-                        <li><a class="white-text" href="contact.html">CONTACT</a></li>
-                        <li><a class="white-text" href="login.html">LOGIN</a></li>
-                    </ul>
+                <div class="col s12 m4">
+                    <div class="card footer_card z-depth-0">
+                        <div class="card-content white-text">
+                            <span class="card-title">Quick Links</span>
+                            <ul class="quick-links">
+                                <li><a class="white-text" href="index.html">HOME</a></li>
+                                <li><a class="white-text" href="categories.html">CATEGORIES</a></li>
+                                <li><a class="white-text" href="contact.html">CONTACT</a></li>
+                                <li><a class="white-text" href="login.html">LOGIN</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row valign-wrapper">
+                <div class="col s12 m4 center">
+                    <a id="logo-container" class="brand-logo white-text" href="index.html">CLASSY CLOSET</a>
+                </div>
+                <div class="col s12 m8">
+                    <div class="card footer_card z-depth-0">
+                        <div class="card-content center socials">
+                            <a href=""> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                            <a href=""><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
+                            <a href=""><i class="fa fa-pinterest-square" aria-hidden="true"></i></a>
+                            <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+                            <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -180,7 +226,6 @@
             </div>
         </div>
     </footer>
-
 
 
     <!--  Scripts-->
