Refactoring to PHP; index.php updated

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -534,7 +534,7 @@
       </div>
       <div class="row valign-wrapper">
         <div class="col s12 m4 center">
-          <a id="logo-container" class="brand-logo white-text" href="index.html">CLASSY CLOSET</a>
+          <a id="logo-container" class="brand-logo-footer white-text" href="index.html">CLASSY CLOSET</a>
         </div>
         <div class="col s12 m8">
           <div class="card footer_card z-depth-0">
